# royal-family-tree

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
scripts/: ged_to_ttl.py  install-jena.sh  run-server.sh
src/royal_family_tree/: helpers.py  namespaces.py  royal_graph.py
tests/: test_docker_compose.sh
